[flake8]
max-line-length = 160
max-complexity = 15
exclude = docs test/package/setup.py

[tool:pytest]
addopts = --ignore build/ --ignore dist/ test/

[mypy]
mypy_path = src/
strict_optional = yes
disallow_untyped_defs = no

[metadata]
name = shiv
version = 0.0.49
description = A command line utility for building fully self contained Python zipapps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/linkedin/shiv
author = Loren Carvalho
author_email = loren@linkedin.com
license = BSD License
license_file = LICENSE
classifiers =
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
package_dir =
  =src
packages = find:
install_requires =
  click>=6.7,!=7.0
  pip>=9.0.3
  pathspec>=0.5.9
  setuptools
  importlib_resources; python_version < "3.7"
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  shiv = shiv.cli:main
  shiv-info = shiv.info:main

[bdist_wheel]
universal = True
